code/examples/stderr/misc_9_1.stderr
error[E0423]: expected value, found struct `Struct`
 --> examples/misc_9_1.rs:9:5
  |
4 | struct Struct {}
  | ---------------- `Struct` defined here
...
9 |     Struct;
  |     ^^^^^^ help: use struct literal syntax instead: `Struct {}`

For more information about this error, try `rustc --explain E0423`.
error: could not compile `code` (example "misc_9_1") due to 1 previous error
